--- a/.env
+++ b/.env
@@ -2,8 +2,9 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:NTOCNzIS2MPCD65itpOh6inq5SRZ9ap7A32HM++SpVI=
 APP_DEBUG=true
-APP_PORT=8000
-APP_URL=http://localhost:${APP_PORT}
+APP_SERVER_HOST=http://localhost
+APP_URL=${APP_SERVER_HOST}:8000
+APP_FRONTEND_URL=${APP_SERVER_HOST}:5173
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
